examples/test/testpolicy11410.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11410
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key20: value23
      key19: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value49
          key8: value32
      podSelector:
        matchLabels:
          key40: value37
          key20: value31
          key30: value41
